# mastergraph-re

./: .gitignore  CMakeLists.txt  Gant_EditorV3.files  bnrn.gantt  dd.gantt  fw.gantt  nbrnr.gantt  qml.qrc  ti.gantt  uh.gantt
.qtc_clangd/: compile_commands.json
include/: DependencyModel.h  ExportManager.h  GlobalDefines.h  GroupModel.h  HistoryEntry.h  MilestoneModel.h  ProjectController.h  ProjectData.h  ResourceManager.h  SettingsManager.h  TaskModel.h
qml/: AboutDialog.qml  AppToolBar.qml  CalendarHeader.qml  CascadeDialog.qml  ChangeMilestoneDateDialog.qml  CommentDialog.qml  CompleteTaskDialog.qml  CurrentTimeLine.qml  DatePicker.qml  DependencyDialog.qml  EditTaskDialog.qml  GanttBar.qml  GridArea.qml  GroupDelegate.qml  HelpDialog.qml  InfoPanel.qml  LeftPanel.qml  ListDialog.qml  MenuButton.qml  MilestoneBar.qml  NewProjectDialog.qml  NewTaskDialog.qml  ResponsibleDialog.qml  SaveAsDialog.qml  SettingsDialog.qml  TaskContextMenu.qml  TaskDelegate.qml  ToolBar.qml  WelcomeScreen.qml  main.qml
resources/: default_tasks.json  default_typologies.json
src/: DependencyModel.cpp  ExportManager.cpp  GroupModel.cpp  HistoryEntry.cpp  MilestoneModel.cpp  ProjectController.cpp  ProjectData.cpp  ResourceManager.cpp  SettingsManager.cpp  TaskModel.cpp  main.cpp
